<resources>
    <string name="app_name">MADT_LAB4</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="empty">Empty</string>
    <string name="example_note">Example Note</string>
    <string name="my_notes">MY NOTES</string>
    <string name="save">SAVE</string>
    <string name="back">Back</string>
    <string name="no_notes_to_display">No notes to display</string>
</resources>